<resources>
    <string name="app_name">Plan Manager</string>
    <string name="title_today">Today\'s Highlight</string>
    <string name="title_month">Month</string>
    <string name="title_profile">Profile</string>
    <string name="title_addPlan">ADD PLAN</string>
    <string name="title_user_pref">Settings</string>

    <string name="title_addTodo">Todo</string>

    <string name="title_addDeadline">Deadline</string>
    <string name="title_addSchedule">Schedule</string>

    <string name="edit_task">Name : </string>
    <string name="edit_location">Location : </string>
    <string name="textview_selectDate"> Select Date </string>
    <string name="textview_Date"> Date :  </string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_done">DONE</string>
    <string name="edit_dueDate">yyyy/mm/dd</string>
    <string name="textview_dueDate"> Due Date : </string>

    <string name="action_add_plan">Add Plan</string>
    <string name="action_share">Share</string>

    //user pref strings
    <string name="pref_zero_day"> Today </string>
    <string name="pref_one_day"> Today and tomorrow </string>
    <string name="pref_two_day"> Next two days </string>
    <string name="pref_three_day"> Next three days </string>

    //values
    <string name="pref_zero_day_value" translatable="false">+0 day</string>
    <string name="pref_one_day_value" translatable="false">+1 day</string>
    <string name="pref_two_day_value" translatable="false">+2 day</string>
    <string name="pref_three_day_value" translatable="false">+3 day</string>

    //user pref store
    <string name="pref_category">Settings </string>
    <string name="pref_range_key">range</string>
    <string name="pref_range_title">Hightlight display range</string>
    <string name="pref_range_default_value">@string/pref_zero_day_value</string>

    //google connection strings
    <string name="Web_client_1">358827406368-bjrd4tkv7f2cc9orqjp1kcop9376o320.apps.googleusercontent.com</string>
    <string name="andriod_client">358827406368-10f9a0jevh2ctbj1vi877fvj772n258i.apps.googleusercontent.com</string>

    <string name="server_client_id">358827406368-qlpit27tvci00aagqqp9vu19bnfp0b53.apps.googleusercontent.com</string>
    <string name="default_web_client_id">358827406368-co1lln88rsvr6rgl14s6t22mf4gc8ck3.apps.googleusercontent.com</string>
    <string name="client_secret">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</string>




</resources>