<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_today">

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.example.planmanager.ui.Today.TodayFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_today" />
        <action
            android:id="@+id/navigate_to_add_plan"
            app:destination="@id/navigation_addPlan" />

    <fragment
        android:id="@+id/navigation_month"
        android:name="com.example.planmanager.ui.Month.MonthFragment"
        android:label="@string/title_month"
        tools:layout="@layout/fragment_month" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.planmanager.ui.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_addPlan"
        android:name="com.example.planmanager.ui.AddPlan.AddPlanFragment"
        android:label="@string/title_addPlan"
        tools:layout="@layout/fragment_add_plan" />
</navigation>